# poc-auto-python

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yaml
Python/: 01_extracao.py  02_transformacao.py  03_disponibilizacao.py  etl.py
aplicacao/dashboard/: app.py  dados_disponibilizados.csv
aplicacao/dashboard/rsconnect-python/: dashboard.json
aplicacao/relatorio/: relatorio.html  relatorio.qmd
aplicacao/relatorio/relatorio_files/libs/bootstrap/: bootstrap.min.css
dados/: dados.db
